# lvgl_win_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build_ninja.bat  create_release.bat  create_release.ps1  launcher_packed.c  launcher_packed.rc  main.c  main.s  run.bat
Ref/: Ref.c++
hal/: lv_hal.c  lv_hal.h  lv_hal_disp.c  lv_hal_disp.h  lv_hal_indev.c  lv_hal_indev.h
lvgl/: CMakeLists.txt  lv_conf.h
platform/windows/: win32_platform.c  win32_platform.h
ui/: custom_keys.h  maincontainer.c  maincontainer.h  setting.c  setting.h  titlebar.c  titlebar.h
